--- a/MaterialDesignFixedHintTextBox/packages.config
+++ b/MaterialDesignFixedHintTextBox/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="2.0.151" targetFramework="net481" />
+  <package id="Dapper-QueryBuilder" version="1.2.9" targetFramework="net481" />
   <package id="MaterialDesignColors" version="2.1.4" targetFramework="net481" />
   <package id="MaterialDesignThemes" version="4.9.0" targetFramework="net481" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net481" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.77" targetFramework="net481" />
 </packages>
