Added basic implementations of ViewModel and Commands. The ability to work without a database has been added to DAL.

--- a/MaterialDesignFixedHintTextBox/FloatingLabelComboBox.csproj
+++ b/MaterialDesignFixedHintTextBox/FloatingLabelComboBox.csproj
@@ -149,6 +149,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonClassesWpf\CommonClassesWpf.csproj">
+      <Project>{781E79D4-D9C6-4792-87B7-EEE2D74846F7}</Project>
+      <Name>CommonClassesWpf</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
