Added ViewModel and expanded data architecture.

--- a/MaterialDesignFixedHintTextBox/FloatingLabelComboBox.csproj
+++ b/MaterialDesignFixedHintTextBox/FloatingLabelComboBox.csproj
@@ -88,6 +88,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModels\StudentsViewModel.cs" />
     <Page Include="Themes\Generic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -101,7 +102,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CustomControls\FloatingLabelComboBox.cs" />
-    <Compile Include="DAL.cs" />
+    <Compile Include="Models\DAL.cs" />
     <Compile Include="MainViewModel.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -155,6 +156,7 @@
       <Name>CommonClassesWpf</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.4.9.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
