--- a/CommonClassesWpf/CommonClassesWpf.csproj
+++ b/CommonClassesWpf/CommonClassesWpf.csproj
@@ -44,6 +44,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\LogicalVisualTreeHelper.GetParent.cs" />
+    <Compile Include="Helpers\LogicalVisualTreeHelper.GetChildren.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Simplified\BaseInpc.cs" />
     <Compile Include="Simplified\CommandExtensionMethods.cs" />
